Fixed email wrapping

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -1281,7 +1281,7 @@ body.overlay .background-overlay
 .contact-details-list li p
 {
 	font-family: 'Raleway';
-	font-size: 16px;
+	font-size: 15px;
 	line-height: 26px;
 	color: #FFF;
 }
